<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_difficulty_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textColor="@color/light_blue"
        android:text="@string/difficulty_detail" />

    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
    <Button
        android:id="@+id/easy_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:textColor="@color/white"
        android:text="@string/easy"
        android:onClick="playEasy" />
    
    <TextView
        android:id="@+id/tv_easy_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/easy_detail" />
    
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
    <Button
        android:id="@+id/medium_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/medium"
        android:onClick="playMedium" />
    
    <TextView
        android:id="@+id/tv_medium_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/medium_detail" />
    
    
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
    <Button
        android:id="@+id/hard_button"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/hard"
        android:onClick="playHard" />
    
    <TextView
        android:id="@+id/tv_hard_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:text="@string/hard_detail" />
    
    </LinearLayout>
    
</LinearLayout>
